--- a/pin/templates/pin2/all_header.html
+++ b/pin/templates/pin2/all_header.html
@@ -10,8 +10,7 @@
 	Solr -> Search engine
 	Neo4j -> Relation between users and post,...
 	Munin -> Server monitoring
-	Graphite -> Application monitoring
-	Kibana + Logstash + Elasticsearch -> Analytics
+	Grafana + Influxdb -> Analytics
 	Celery, RabbitMQ, Pillow, Python, Memcache, Fabric
 
 	Learned it? Do it. :D -->
