--- a/pin/templates/pin2/all_header.html
+++ b/pin/templates/pin2/all_header.html
@@ -4,9 +4,8 @@
 	HAProxy -> http load balancer
 	Nginx + Uwsgi -> Web server
 	MySQL -> posts, auth
-	Cassandra -> Counters
-	MongoDB -> Notification, Logs, Stats
-	Redis -> Denormalized data, streams, likes, leaderboard
+	Cassandra -> Counters, user streams
+	Redis -> Denormalized data, streams, likes, leaderboard, notification
 	Solr -> Search engine
 	Neo4j -> Relation between users and post,...
 	Munin -> Server monitoring
