new advertise in related post test

--- a/pin/templates/pin2/item.html
+++ b/pin/templates/pin2/item.html
@@ -24,6 +24,7 @@
     </div>
     <div class="pa20" id="related_posts">
         <h3 class="wis_title">تصاویر مرتبط</h3>
+        {% include "pin2/tabliq/_728x90.html" %}
         <div id="feed" class="masonry">
             <a href="{{related_url}}"> مطالب مرتبط </a>
         </div>
