--- a/pin/templates/pin2/all_header.html
+++ b/pin/templates/pin2/all_header.html
@@ -4,8 +4,8 @@
 	HAProxy -> http load balancer
 	Nginx + Uwsgi -> Web server
 	MySQL -> posts, auth
-	Cassandra -> Counters, user streams
-	Redis -> Denormalized data, streams, likes, leaderboard, notification
+	Cassandra -> Counters, user streams, notification
+	Redis -> Denormalized data, streams, likes, leaderboard
 	Solr -> Search engine
 	Neo4j -> Relation between users and post,...
 	Munin -> Server monitoring
