--- a/pin/templates/pin2/item.html
+++ b/pin/templates/pin2/item.html
@@ -23,11 +23,13 @@
         {% include "pin2/items_inner.html" %}
     </div>
     <div class="pa20" id="related_posts">
-        <div class="col-md-4 col-sm-12 col-xs-12">
-        <h3 class="wis_title">تصاویر مرتبط</h3>
-        </div>
-        <div class="col-md-8 col-sm-12 col-xs-12">
-        {% include "pin2/tabliq/_728x90.html" %}
+        <div class="row">
+            <div class="col-md-4 col-sm-12 col-xs-12">
+                <h3 class="wis_title">تصاویر مرتبط</h3>
+            </div>
+            <div class="col-md-8 col-sm-12 col-xs-12">
+                {% include "pin2/tabliq/_728x90.html" %}
+            </div>
         </div>
         <div id="feed" class="masonry">
             <a href="{{related_url}}"> مطالب مرتبط </a>
