--- a/pin/templates/pin2/all_header.html
+++ b/pin/templates/pin2/all_header.html
@@ -5,7 +5,7 @@
 	Nginx + Uwsgi -> Web server
 	MySQL -> posts, auth
 	Cassandra -> Counters, user streams, notification
-	Redis -> Denormalized data, streams, likes, leaderboard
+	Redis -> Denormalized data, likes, leaderboard
 	Solr -> Search engine
 	Neo4j -> Relation between users and post,...
 	Munin -> Server monitoring
