--- a/pin/templates/pin2/__items_base_v6.html
+++ b/pin/templates/pin2/__items_base_v6.html
@@ -61,7 +61,7 @@
 	<div class="clearfix"></div>
 	{% if not item.text.strip == "" %}
 	<div class="description">
-		<p>{{item.text|safe|truncatewords:"50"|linebreaksbr|urlizetrunc:30}}</p>
+		<p>{{item.text|truncatewords:"50"|linebreaksbr|urlizetrunc:30}}</p>
 	</div>
 	{% endif %}
 
