--- a/pin/templates/pin2/_user_followers.html
+++ b/pin/templates/pin2/_user_followers.html
@@ -4,7 +4,7 @@
 
 {% if user_items %}
 	{% for u in user_items %}
-	<div class="follow_box box">		
+	<div class="follow_box box">
 		{{u.follower.id|get_user_posts|safe}}
 
 		<div class="follow_avatar">
@@ -23,7 +23,12 @@
 		<div class="action">
 			{% if u.follower.id != request.user.id and request.user.is_authenticated%}
                 {% if request.user.id|get_follow_status:u.follower.id == False %}
-                    <a data-user-id="{{u.follower.id}}" class="wis_btn green mabo10 ajax-follow" href='{% url "pin-follow" u.follower.id 1 %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-plus"></i></a>
+                    {{request.user.id|follow_rq_status:u.follower.id}}
+                    {% if request.user.id|follow_rq_status:u.follower.id == True %}
+                        <a data-user-id="{{u.follower.id}}" class="wis_btn gray mabo10 ajax-follow" href='{% url "remove-follow-request" u.follower.id %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-clock-o"></i></a>
+                    {% else %}
+                        <a data-user-id="{{u.follower.id}}" class="wis_btn green mabo10 ajax-follow" href='{% url "pin-follow" u.follower.id 1 %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-plus"></i></a>
+                    {% endif %}
                 {% else %}
                     <a data-user-id="{{u.follower.id}}" class="wis_btn mabo10 red ajax-follow" href='{% url "pin-follow" u.follower.id 0 %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-minus"></i></a>
                 {%endif%}
