--- a/pin/templates/pin2/_user_data.html
+++ b/pin/templates/pin2/_user_data.html
@@ -76,7 +76,7 @@
                         {% endif %}
                         {% if profile.user_id != request.user.id and request.user.is_authenticated %}
                             {% if not request.user.id|allow_follow:profile.user_id%}
-                                {% if follow_status == 0 %}
+                                {% if not follow_status %}
                                     {% if is_private and follow_req %}
                                         <a data-user-id="{{profile.user_id}}" class="wis_btn pull-left gray mabo10 ajax-follow" href='{% url "remove-follow-request" profile.user_id %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-clock-o"></i></a>
                                     {% else %}
