--- a/pin/templates/pin2/items_inner.html
+++ b/pin/templates/pin2/items_inner.html
@@ -296,11 +296,15 @@
                 </div>
                 <div class="clear"></div>
                 {% if post.user.id != request.user.id and user.is_authenticated %}
-                {% if follow_status == 0 %}
-                <a class="wis_btn green w100 mabo10 mato10 ajax-follow" data-user-id="{{post.user.id}}" href='{% url "pin-follow" post.user.id 1 %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-plus"></i></a>
-                {% else %}
-                <a class="wis_btn red w100 mabo10  mato10 ajax-follow" data-user-id="{{post.user.id}}" href='{% url "pin-follow" post.user.id 0 %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-minus"></i></a>
-                {%endif%}
+                    {% if not follow_status%}
+                        {% if not pending %}
+                            <a class="wis_btn green w100 mabo10 mato10 ajax-follow" data-user-id="{{post.user.id}}" href='{% url "pin-follow" post.user.id 1 %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-plus"></i></a>
+                        {% else %}
+                            <a data-user-id="{{post.user.id}}" class="wis_btn pull-left gray mabo10 ajax-follow" href='{% url "remove-follow-request" post.user.id %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-clock-o"></i></a>
+                        {% endif %}
+                    {% else %}
+                        <a class="wis_btn red w100 mabo10  mato10 ajax-follow" data-user-id="{{post.user.id}}" href='{% url "pin-follow" post.user.id 0 %}'><i class="glyphicon glyphicon-user"></i> <i class="fa fa-minus"></i></a>
+                    {%endif%}
                 {% endif %}
             </div>
         </div>
