--- a/pin/templates/pin2/item.html
+++ b/pin/templates/pin2/item.html
@@ -28,7 +28,9 @@
                 <h3 class="wis_title">تصاویر مرتبط</h3>
             </div>
             <div class="col-md-9 col-sm-12 col-xs-12">
+            {% if DISPLAY_AD %}
                 {% include "pin2/tabliq/_728x90.html" %}
+            {%endif%}
             </div>
         </div>
         <div id="feed" class="masonry">
