add offset to follow req

--- a/pin/templates/pin2/user_follow_requests.html
+++ b/pin/templates/pin2/user_follow_requests.html
@@ -21,6 +21,12 @@
     <br>
     <br>
 
+    {% if offset %}
+        <span data-next="{{offset}}" ></span>
+    {%else%}
+        <span data-next="0" ></span>
+    {%endif%}
+
 {% endblock content %}
 {% block js %}
     <script>
