--- a/pin/templates/pin2/profile/blocked_list.html
+++ b/pin/templates/pin2/profile/blocked_list.html
@@ -31,7 +31,7 @@
 </div>
 {% else %}
 <div class="container">
-    <h4 class="box pa10 tace col-md-12">شما کسی را بلاک نکرده اید <i class="fa fa-smile-o"></i></h4>
+    <h3 class="box pa10 tace col-md-12">شما کسی را بلاک نکرده اید</h3>
 </div>
 {% endif %}
 
