--- a/pin/templates/pin2/user.html
+++ b/pin/templates/pin2/user.html
@@ -19,6 +19,19 @@
 // var next_pref = '?pid=';
 </script>
 
+{% if not latest_items %}
+<div class="container">
+    <div class="box pa10 tace col-md-12">
+    {% if is_private and not show_followers%}
+        <img src="{{MEDIA_URL}}Private 2-50.png" alt="">
+        <h3>این حساب کاربری خصوصی میباشد</h3>
+    {% else %}
+        <h3>موردی پیدا نشد</h3>
+    {% endif %}
+    </div>
+</div>
+{% endif %}
+
 <div class="pa20 pato0">
     <div id="feed" class="masonry">
         {% include "pin2/_items_2_v6.html"%}
