--- a/pin/templates/pin2/user_followers.html
+++ b/pin/templates/pin2/user_followers.html
@@ -29,7 +29,16 @@
 	{% include "pin2/_user_followers.html"%}
 </div>
 {% else %}
-<h3>موردی پیدا نشد</h3>
+    <div class="container">
+        <div class="box pa10 tace col-md-12">
+        {% if is_private and not show_followers%}
+            <img src="{{MEDIA_URL}}Private 2-50.png" alt="">
+            <h3>این حساب کاربری خصوصی میباشد</h3>
+        {% else %}
+            <h3>موردی پیدا نشد</h3>
+        {% endif %}
+        </div>
+    </div>
 {% endif %}
 
 {% if user_items|length > 15 %}
