--- a/pin/templates/pin2/user.html
+++ b/pin/templates/pin2/user.html
@@ -22,7 +22,7 @@
 {% if not latest_items %}
 <div class="container">
     <div class="box pa10 tace col-md-12">
-    {% if is_private and not show_followers%}
+    {% if is_private and not show_posts%}
         <img src="{{MEDIA_URL}}Private 2-50.png" alt="">
         <h3>این حساب کاربری خصوصی میباشد</h3>
     {% else %}
