fix show post bug

--- a/pin/templates/pin2/user_followers.html
+++ b/pin/templates/pin2/user_followers.html
@@ -32,7 +32,7 @@
     <div class="container">
         <div class="box pa10 tace col-md-12">
         {% if is_private and not show_followers%}
-            <img src="{{MEDIA_URL}}Private 2-50.png" alt="">
+            <img src="{{MEDIA_URL}}Private_50.png" alt="">
             <h3>این حساب کاربری خصوصی میباشد</h3>
         {% else %}
             <h3>موردی پیدا نشد</h3>
