--- a/pin/templates/pin2/user__likes.html
+++ b/pin/templates/pin2/user__likes.html
@@ -20,8 +20,8 @@
 {% if  not latest_items%}
 <div class="container">
     <div class="box pa10 tace col-md-12">
-    {% if is_private and not show_followers%}
-        <img src="{{MEDIA_URL}}Private 2-50.png" alt="">
+    {% if is_private and not show_likes%}
+        <img src="{{MEDIA_URL}}Private_50.png" alt="">
         <h3>این حساب کاربری خصوصی میباشد</h3>
     {% else %}
         <h3>موردی پیدا نشد</h3>
