--- a/pin/templates/pin2/user.html
+++ b/pin/templates/pin2/user.html
@@ -23,7 +23,7 @@
 <div class="container">
     <div class="box pa10 tace col-md-12">
     {% if is_private and not show_posts%}
-        <img src="{{STATIC_CDN}}Private_50.png" alt="">
+        <img src="{{STATIC_CDN}}img/Private_50.png" alt="">
         <h3>این حساب کاربری خصوصی میباشد</h3>
     {% else %}
         <h3>موردی پیدا نشد</h3>
