--- a/pin/templates/pin2/_user_data.html
+++ b/pin/templates/pin2/_user_data.html
@@ -17,7 +17,7 @@
                             <a href='{% url "pin-absuser" profile.user_id|get_user_name %}'>{{profile.name}}</a>
                             {% if request.user.is_superuser and is_private %}
                             <small class="badge">
-                                <img src="{{STATIC_CDN}}Private_20.png" alt="">
+                                <img src="{{STATIC_CDN}}img/Private_20.png" alt="">
                             </small>
                             {% endif %}
                         </h2>
