--- a/pin/templates/pin2/items_inner.html
+++ b/pin/templates/pin2/items_inner.html
@@ -204,7 +204,7 @@
                 <div class="activity_btn">
                     <div class="btn-box comment">
                         <a href="#submit_comment">
-                            <span class="cnt-like">{{post.cnt_comment|pn}}</span>
+                            <span class="cnt-like" id="cnt_comment">{{post.cnt_comment|pn}}</span>
                             <span class="cmnt_icon"></span>
                         </a>
                     </div>
