remove related post from item page

--- a/pin/templates/pin2/item.html
+++ b/pin/templates/pin2/item.html
@@ -17,8 +17,11 @@
 <script>
     var comments_url = "{{comments_url}}";
     var related_url = "{{related_url}}";
+    {% comment %}
+
     var start_loading=0;
     var a_url="{{related_url}}";
+    {% endcomment %}
 </script>
 <div id="main">
 	<div class="container">
