--- a/pin/templates/pin2/item_related.html
+++ b/pin/templates/pin2/item_related.html
@@ -5,10 +5,13 @@
 {%block description%}{{post.text|striptags|remove_newlines|truncatewords:60}}{%endblock%}
 
 {% block content %}
+{% comment %}
+
 <script>
     var start_loading=0;
     var a_url="{{related_url}}";
 </script>
+{% endcomment %}
 <div id="main">
 	<div class="container-fluid">
 		<div id="feed" class="masonry">
