--- a/pin/templates/pin2/item.html
+++ b/pin/templates/pin2/item.html
@@ -25,7 +25,8 @@
 </script>
 <div id="main">
 	<div class="container">
-        {% include "pin2/items_inner.html" %}
+        {# {% include "pin2/items_inner.html" %} #}
+        {% include "pin2/api7_items_inner.html" %}
     </div>
     <div class="pa20" id="related_posts">
         <div class="row">
