--- a/pin/templates/pin2/_items_2_v6.html
+++ b/pin/templates/pin2/_items_2_v6.html
@@ -2,7 +2,8 @@
 
 {% for item in latest_items %}
 	{% if item.images.thumbnail.url %}
-		{% include "pin2/__items_base_v6.html" %}
+		{# {% include "pin2/__items_base_v6.html" %} #}
+		{% include "pin2/__api7_items_base_v6.html" %}
 	{% endif %}
 
 	{% if offset %}
