--- a/pin/templates/pin2/_notif.html
+++ b/pin/templates/pin2/_notif.html
@@ -51,22 +51,28 @@
 			</a>
 		</div>
 	</div>
-	<div class="notif-type col-md-5 col-sm-5 col-xs-8">
+	<div class="notif-type col-md-5 col-sm-5 col-xs-2">
+		<div class="col-md-5 col-sm-1">
+			{{item.actor|get_absusername}}
+		</div>
+	</div>
+	<div class="notif-type col-md-8 col-sm-5 col-xs-8">
 		{% if item.type == 1 %}
-			<i class="glyphicon glyphicon-heart-empty red"></i> {{item.actor|get_absusername}} تصویر شما را پسندید
+			<i class="glyphicon glyphicon-heart-empty red"></i> تصویر شما را پسندید
 		{% elif item.type == 2 %}
-			<i class="glyphicon glyphicon-comment"></i>{{item.actor|get_absusername}}  برای تصویر شما نظر داده است
+			<i class="glyphicon glyphicon-comment"></i> برای تصویر شما نظر داده است
 		{% elif item.type == 3 %}
 			<i class="icon-ok"></i>
 		{% elif item.type == 4 %}
 			<i class="icon-remove"></i>
 		{% elif item.type == 10 %}
-			<i class="icon-user"></i> {{item.actor|get_absusername}} شما را دنبال می کند
+			<i class="icon-user"></i> شما را دنبال می کند
 		{% elif item.type == 5 %}
     	<i class="glyphicon glyphicon-ok"></i> پست شما برگزیده شد
 		{% endif %}
-
+		({{item.pid|date_filter}})
 	</div>
+
 	{% if offset %}
 	<span data-next="{{offset}}" ></span>
 	{%else%}
