--- a/pin/templates/pin2/_notif.html
+++ b/pin/templates/pin2/_notif.html
@@ -51,9 +51,9 @@
 			</a>
 		</div>
 	</div>
-	<div class="notif-type col-md-8 col-sm-5 col-xs-2">
+	{# <div class="notif-type col-md-8 col-sm-5 col-xs-2">
 		{{item.actor|get_absusername}}
-	</div>
+	</div> #}
 	<div class="notif-type col-md-8 col-sm-5 col-xs-8">
 		{% if item.type == 1 %}
 			<i class="glyphicon glyphicon-heart-empty red"></i> تصویر شما را پسندید
@@ -68,7 +68,7 @@
 		{% elif item.type == 5 %}
     	<i class="glyphicon glyphicon-ok"></i> پست شما برگزیده شد
 		{% endif %}
-		({{item.pid|date_filter}})
+		{# ({{item.pid|date_filter}}) #}
 	</div>
 
 	{% if offset %}
