fix popular post

--- a/pin/templates/pin2/_items_2_v6.html
+++ b/pin/templates/pin2/_items_2_v6.html
@@ -3,7 +3,11 @@
 {% for item in latest_items %}
 	{% if item.images.thumbnail.url %}
 		{% include "pin2/__items_base_v6.html" %}
-		{# {% include "pin2/__api7_items_base_v6.html" %} #}
+		{% comment %}
+			{% include "pin2/__api7_items_base_v6.html" %}
+		{% endcomment %}
+
+
 	{% endif %}
 
 	{% if offset %}
