fix notification view

--- a/pin/templates/pin2/_notif.html
+++ b/pin/templates/pin2/_notif.html
@@ -76,7 +76,7 @@
 		{% elif item.type == 5 %}
     		<i class="glyphicon glyphicon-ok"></i> پست شما برگزیده شد
     	{% elif item.type == 7 %}
-    		<i class="glyphicon glyphicon-user"></i> درخواست شما را پذیرفت
+    		درخواست شما را پذیرفت
 		{% endif %}
 
 		{% comment %}
