--- a/pin/templates/pin2/notify.html
+++ b/pin/templates/pin2/notify.html
@@ -47,7 +47,7 @@
         {% elif noti.type == 5 %}
         <i class="glyphicon glyphicon-ok"></i> پست شما برگزیده شد
         {% elif noti.type == 7 %}
-            <i class="glyphicon glyphicon-user"></i> درخواست شما را پذیرفت
+            درخواست شما را پذیرفت
         {% endif %}
     </div>
 {% comment %}
