--- a/pin/templates/registration/registration_form.html
+++ b/pin/templates/registration/registration_form.html
@@ -2,16 +2,17 @@
 {% load widget_tweaks %}
 {% load i18n %}
 {% block content %}
+{% load pin_tags %}
 
+{% with "latest"|get_link  as latest_app_link%}
 <div class="login wis_form box ofh mato50">
 	<div class="logo_box">
 		<div class="wis_new_logo w100">
 			<img src="{{STATIC_CDN}}v2/images/new_logo.png" alt="">
-
 			<div class="download_app mato20 mabo50">
 				<p>{%trans "Android software download" %}</p>
-				<a class="wis_btn green" href="http://cafebazaar.ir/app/ir.mohsennavabi.wisgoon/?l=fa">{%trans "Download from bazzar"%}</a>
-				<a class="wis_btn orange" href="http://static.wisgoon.com/media/app/latest.apk">{%trans "Direct download"%}</a>
+				<a class="wis_btn green" href="http://cafebazaar.ir/app/com.wisgoon.android/?l=fa">{%trans "Download from bazzar"%}</a>
+				<a class="wis_btn orange" href="http://static.wisgoon.com/media/{{latest_app_link}}">{%trans "Direct download"%}</a>
 
 			</div>
 		</div>
@@ -38,19 +39,19 @@
 			<p>
 				<a href="/accounts/login/">{%trans "If you have registered ,log in"%}</a>
 			</p>
-			
+
 			<div class="tace">
 				<input type="submit" value='{%trans "sign up"%}' class="wis_btn orange mato50 mabo50 w50">
 			</div>
 		</form>
 	{% else %}
-		{% trans "Website update in progress" %}			
+		{% trans "Website update in progress" %}
 	{% endif %}
 	</div>
 
-	
+
 	<div class="clear"></div>
 
 </div>
-
+{% endwith%}
 {% endblock %}
