add pagination for user profile

--- a/pin/templates/pin2/_items_2_v6.html
+++ b/pin/templates/pin2/_items_2_v6.html
@@ -10,6 +10,8 @@
 
 	{% endif %}
 
+{% comment %}
+
 	{% if offset %}
 		<span data-next="{{offset}}" ></span>
 	{% elif ptime %}
@@ -17,6 +19,7 @@
 	{%else%}
 		<span data-next="{{item.id}}" ></span>
 	{%endif%}
+{% endcomment %}
 
 {%endfor%}
 
