--- a/pin/templates/pin2/user.html
+++ b/pin/templates/pin2/user.html
@@ -44,7 +44,7 @@
               <li class="disabled"><span>&laquo;</span></li>
             {% endif %}
 
-            {% for i in latest_items.paginator.page_range %}
+            {% for i in page_range %}
 
               {% if latest_items.number == i %}
                 <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
