--- a/pin/templates/base/tabliq.html
+++ b/pin/templates/base/tabliq.html
@@ -1,5 +1,5 @@
 <a href="http://promax.co.ir/?utm_source=wisgoon&utm_medium=banner&utm_campaign=wisgoon_mar_branding" target="_blank">
-    <img class="adhere" src="static.wisgoon.com/media/ads/728X90.gif" border="0" height="90" width="728">
+    <img class="adhere" src="{{ STATIC_CDN }}ads/728X90.gif" border="0" height="90" width="728">
 </a>
 {% comment %}
 
