--- a/feedreader/media/assets/v2/css_org/style.css
+++ b/feedreader/media/assets/v2/css_org/style.css
@@ -2656,6 +2656,9 @@ div.comment div div.row:hover .del-comment{
 }
 .adhere {
 	display: inline-block;
+	width: 100%;
+    max-width: 728px;
+    margin: 0 auto;
 }
 
 /* submit modal css */
