--- a/pin/templates/pin2/cats.html
+++ b/pin/templates/pin2/cats.html
@@ -38,7 +38,7 @@
                             <li><a href="{% url 'pin-popular-offset' 'lasteigth' %} ">8ساعت گذشته</a></li>
                         </ul>
                     </li>
-                    {% cache 86400 catsbar2 %}
+                    {% cache 86400 catsbarv3 %}
                     <li class="cats">
                         <a href="javascript:;"> گروه ها <i class="fa fa-angle-down"></i></a>
                         <ul>
