change banner to saba

--- a/pin/templates/base/tabliq.html
+++ b/pin/templates/base/tabliq.html
@@ -1,8 +1,15 @@
+<!-- saba -->
 
+<script type="text/javascript"> (function(d) { var id = 'click_sabavision_' + ~~(Math.random() * 999999), url = location.protocol + '//click.sabavision.com/get_camp.php?id=69341,69340,69339,69338&appended_id='+id; d.write('<div id="' + id + '"></div>'); d.write('<script type="text/javascript" src="' + url + '" async></scri' + 'pt>'); })(document);</script>
+
+
+{% comment %}
+
+<!-- clickyab fix banner -->
 <a href="http://promax.co.ir/?utm_source=wisgoon&utm_medium=banner&utm_campaign=wisgoon_mar_branding" target="_blank">
     <img class="adhere" src="{{ STATIC_CDN }}ads/728X90.gif" border="0" height="90" width="728">
 </a>
-{% comment %}
+
 <!-- clickyab -->
 <script type="text/javascript">
     var clickyab_ad = clickyab_ad || [];
@@ -15,9 +22,6 @@
 <script type="text/javascript" src="http://a.clickyab.com/show.js"></script>
 {% endcomment %}
 
-{% comment %}
-<script type="text/javascript" src="http://click.sabavision.com/get_camp.php?id=22943,22942,22941,22940,22939,22938"></script>
-{% endcomment %}
 
 
 {% comment %}
