--- a/pin/templates/pin2/item.html
+++ b/pin/templates/pin2/item.html
@@ -35,7 +35,9 @@
             </div>
             <div class="col-md-9 col-sm-12 col-xs-12">
             {% if DISPLAY_AD %}
-                {% include "pin2/tabliq/_728x90.html" %}
+                <div class="mato10 mabo10 tab_300 tabliq" style="border-radius:8px;overflow:hidden;height:100px;">
+                    {% include "base/tabliq.html" %}
+                </div>
             {%endif%}
             </div>
         </div>
