--- a/pin/templates/pin2/items_inner.html
+++ b/pin/templates/pin2/items_inner.html
@@ -363,7 +363,7 @@
         </div>
 
         {% if DISPLAY_AD %}
-        {% include "pin2/tabliq/_468x60_1.html" %}
+        {% include "pin2/tabliq/_468x60.html" %}
         {% endif %}
 
     </div>
