--- a/pin/templates/pin2/tabliq/_300x250.html
+++ b/pin/templates/pin2/tabliq/_300x250.html
@@ -1,16 +1,11 @@
 <div class="mato10 mabo10 tab_300 tabliq" style="border-radius:8px;overflow:hidden;height:250px;">
+
+<!-- saba -->
+<script type="text/javascript"> (function(d) { var id = 'click_sabavision_' + ~~(Math.random() * 999999), url = location.protocol + '//click.sabavision.com/get_camp.php?id=69349,69348,69347,69346&appended_id='+id; d.write('<div id="' + id + '"></div>'); d.write('<script type="text/javascript" src="' + url + '" async></scri' + 'pt>'); })(document);</script>
+    
+
 {% comment %}
-<!-- saba300 -->
-<div class="mato10 mabo10" style="border-radius:8px;overflow:hidden;height:250px;">
-    <script type="text/javascript" src="http://click.sabavision.com/get_camp.php?id=27480,27479,27478,27477,27476,27475&banner_position=left-top"></script>
-</div>
-
-<div class="mabo10" style="border-radius:8px;overflow:hidden;height:100px;">
-    <script type="text/javascript" src="http://click.sabavision.com/get_camp.php?id=27486,27485,27484,27483,27482,27481&banner_position=left-top"></script>  
-</div>
-
-{% endcomment %}
-
+<!-- clickyab -->
 <script type="text/javascript">
     var clickyab_ad = clickyab_ad || [];
     clickyab_ad['id'] = 6801448283017;
@@ -20,6 +15,7 @@
     clickyab_ad['height'] = 250;
 </script>
 <script type="text/javascript" src="http://a.clickyab.com/show.js"></script>
+{% endcomment %}
 
 
 </div>
