--- a/pin/templates/pin2/_pin_sidebar.html
+++ b/pin/templates/pin2/_pin_sidebar.html
@@ -3,7 +3,7 @@
 
 {% if DISPLAY_AD and request.user_agent.is_mobile %}
 <div class="only_mobile_view">
-	{% include "pin2/tabliq/_468x60_2.html" %}
+	{% include "pin2/tabliq/_468x60.html" %}
 </div>
 {% endif %}
 
@@ -102,3 +102,4 @@
 <br />
 {% include "base/ad-290x100.html" %}
 {% endcomment %}
+
